# stackpulse

./: .gitignore  CLAUDE.md  README.md  analysis_candidates.py  analysis_db.py  analysis_llm_cache.py  analyze.py  cli.py  config.py  install.sh  job_scraper_direct.py  job_search_browser.py  patchright_shim.py  pyproject.toml  requirements.txt  scrape.py  scrape_fast.py  setup_session.py  stackpulse  ui_rich.py
