[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stackpulse"
version = "0.1.0"
description = "Job scraping and skill landscape analysis for backend roles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "linkedin-scraper>=3.1.1",
    "playwright",
    "python-dotenv",
    "pandas",
    "openpyxl",
    "openai",
    "typer",
    "rich",
]

[project.scripts]
stackpulse = "cli:main"

[tool.setuptools]
py-modules = [
    "cli",
    "config",
    "setup_session",
    "scrape",
    "job_scraper_direct",
    "analyze",
    "analysis_db",
    "analysis_candidates",
    "analysis_llm_cache",
]
