[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stackpulse"
version = "0.1.0"
description = "Job scraping and skill landscape analysis for backend roles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "linkedin-scraper>=3.1.1",
    "patchright",
    "python-dotenv",
    "pandas",
    "openpyxl",
    "openai",
    "typer",
    "rich",
    "beautifulsoup4",
    "lxml",
    "requests",
]

[project.scripts]
stackpulse = "cli:main"

[tool.setuptools]
py-modules = [
    "cli",
    "config",
    "setup_session",
    "scrape",
    "scrape_fast",
    "job_scraper_direct",
    "job_search_browser",
    "patchright_shim",
    "analyze",
    "analysis_db",
    "analysis_candidates",
    "analysis_llm_cache",
    "ui_rich",
]
